# OpenSees

./: .gitattributes  CMakeLists.txt  Conf.cmake  makeUbuntu.sh  makeUbuntu_CUDA.sh  makeWIN_CUDA.bat  makeWIN_Ninja.bat  makeWIN_VS.bat  makeWIN_VS_Profiling.bat
.github/workflows/: sync-upstream.yml
EXAMPLES/KRAlphaExplicit/: .gitignore  README.md  analysis_utils.py  collect_timing.py  ops_import.py  plotResults.py  run_benchmarks.sh  shear_frame_lib.py  shear_run_matrix.py
EXAMPLES/LargeSP/: Example.tcl
EXAMPLES/ShearBuilding40SP/: .gitignore  README.md  ShearBuilding40.tcl  ShearBuilding40MP.tcl  ShearBuilding40SP.tcl  plot_compare.py  run.bat  run_compare.bat  shear40_print.tcl
EXAMPLES/SolverBenchmark/: example_solid_bar.py  plot_timing.py
OTHER/METIS/: CMakeLists.txt
SCRIPTS/linux/: opensees-cuda-env.sh  run-cuda-smoke.sh  run-mrf-tcl.sh  stage-tcl-runtime.sh
SCRIPTS/windows/: environment-opensees-cuda.yml  opensees-cuda-env.bat  plot-sdof-results.bat  rebuild-openseesmp.bat  rebuild-openseessp.bat  run-cuda-smoke.bat  run-mrf-tcl.bat  run-sdof-kralpha.bat  run_cuda_smoke_test.py  run_cuda_tp_smoke_test.py  setup-opensees-cuda-env.bat  test-cuda-examples.bat
SRC/: Makefile  Makefile.incl  classTags.h
SRC/api/: CMakeLists.txt  elementAPI.h  elementAPI_TCL.cpp
SRC/interpreter/: DL_Interpreter.cpp  DL_Interpreter.h  OpenSeesCommands.cpp  OpenSeesCommands.h  PythonModule.cpp  PythonModule.h  PythonWrapper.cpp  (+1 more)
tests/: cuda_explicit_alpha_smoke.py  cuda_explicit_alpha_tp_smoke.py  cuda_explicit_alpha_tp_smoke.tcl  cudss_multithreading_smoke.tcl
(+156 files in other folders)
